bin/tests/snapshots/shell_idiom__050d5a0e9511e0ee235773970e2546e2_fix.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  cp -r dist $out
  chmod 755 $out
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,6 @@
 stdenv.mkDerivation { installPhase = ''
-  cp -r dist $out
-  chmod 755 $out
+  runHook preInstall
+  cp -r dist "$out"
+  chmod 755 "$out"
+  runHook postInstall
 ''; }
