bin/tests/snapshots/shell_idiom__050d5a0e9511e0ee235773970e2546e2_lint_errfmt.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  cp -r dist $out
  chmod 755 $out
''; }
---
<temp_file_path>>2:14:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>3:13:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
