bin/tests/snapshots/shell_idiom__050d5a0e9511e0ee235773970e2546e2_lint_stderr.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  cp -r dist $out
  chmod 755 $out
''; }
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:14 ]
   │
 2 │   cp -r dist $out
   │              ──┬─  
   │                ╰─── SC2086: Double quote to prevent globbing and word splitting.
 3 │   chmod 755 $out
   │             ──┬─  
   │               ╰─── SC2086: Double quote to prevent globbing and word splitting.
───╯
[shell_idiom] Advice: Shell commands with a shorter idiom
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │   cp -r dist $out
   │   │ 
   │   ╰─ The phase doesn't run runHook preInstall
 3 │   chmod 755 $out
   │                 │ 
   │                 ╰─ The phase doesn't run runHook postInstall
───╯
