bin/tests/snapshots/shell_idiom__52d1452421dd8399af5faf45f1c4380e_fix.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  runHook preInstall
  set -euo pipefail
  make install
  runHook postInstall
''; }
---
