bin/tests/snapshots/shell_idiom__52d1452421dd8399af5faf45f1c4380e_lint_errfmt.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  runHook preInstall
  set -euo pipefail
  make install
  runHook postInstall
''; }
---
<temp_file_path>>3:3:I:33:[shell_idiom] stdenv phases already run with `set -eu -o pipefail`
