bin/tests/snapshots/shell_idiom__52d1452421dd8399af5faf45f1c4380e_lint_stderr.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  runHook preInstall
  set -euo pipefail
  make install
  runHook postInstall
''; }
---
[shell_idiom] Advice: Shell commands with a shorter idiom
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   set -euo pipefail
   │   ────────┬────────  
   │           ╰────────── stdenv phases already run with set -eu -o pipefail
───╯
